--- a/css/style.css
+++ b/css/style.css
@@ -1,140 +1,200 @@
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 a:hover {
-  color: #2ac1bc;
+    color: #2ac1bc;
 }
 
 button {
-  padding: 0;
-  margin: 0;
-  border: 0;
-  background: none;
-  font: inherit;
+    padding: 0;
+    margin: 0;
+    border: 0;
+    background: none;
+    font: inherit;
 }
 
-
 .wrap {
-  position: relative;
-  min-height: 840px;
-  background: white;
-  z-index: 10000;
-  transition: 0.7s all ease;
+    position: relative;
+    min-height: 840px;
+    background: white;
+    z-index: 10000;
+    transition: 0.7s all ease;
 }
 
 .common-header {
-  position: fixed;
-  left: 0;
-  top: 0;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  z-index: 100;
-  background: rgba(255,255,255,0.9);
+    position: relative;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 50px;
+    z-index: 100;
+    background: rgba(0, 0, 0, 0.9);
 }
-
 
 .common-header a {
-  display: block;
-  padding: 15px;
+    display: block;
+    padding: 15px;
+    color: white;
 }
+
 .common-header button {
-  padding: 15px;
+    padding: 15px;
+    color: white;
+}
+
+.main .main-item-nav {
+    position: relative;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    z-index: 100;
+    background: rgba(50, 50, 50, 0.6);
+}
+
+.main-item-nav h2 {
+    display: none;
+}
+
+.box-theme-galaxy {
+    position: relative;
+    width: 100%;
+    height: 1214px;
+    display: flex;
+    justify-content: center;
+}
+
+.box-theme-galaxy h2 {
+    display: none;
+}
+
+.box-theme-galaxy h3 {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 200;
+    font-size: 90px;
+    color: white;
+    text-align: center;
+    /*display: block;*/
+    /*line-height: 1214px;*/
+    /*white-space: nowrap;*/
+}
+
+.box-theme-galaxy .background-area {
+  position: absolute;
+  size: 100%;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+.box-theme-galaxy .phone-area {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 100;
 }
 
 .side-navigation {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 50%;
-  height: 100%;
-  padding-bottom: 41px;
-  background-image: url("galaxy.jpg");
-  background: #808080;
-  box-sizing: border-box;
-  color: white;
-  /* transform */
-  /* 형태를 변화시킴 */
-  z-index: 100;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    padding-bottom: 41px;
+    background-image: url("galaxy.jpg");
+    background: #808080;
+    box-sizing: border-box;
+    color: white;
+    z-index: 100;
 }
 
 .side-navigation .item-nav {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 25px;
-  bottom: 41px;
-  font-size: 20px;
-  font-weight: bold;
-  overflow-y: auto;
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 25px;
+    bottom: 41px;
+    font-size: 20px;
+    font-weight: bold;
+    overflow-y: auto;
 }
 
 .side-navigation .item-nav ul {
-  margin: 30px 0;
+    position: relative;
+    margin: 30px 0;
 }
+
 .side-navigation .item-nav a {
-  display: inline-block;
-  padding: 6px 20px 4px;
+    display: inline-block;
+    padding: 6px 20px 4px;
 }
+
 .side-navigation .service-nav ul {
-  margin: 30px 0;
+    position: relative;
+    margin: 30px 0;
 }
+
 .side-navigation .service-nav a {
-  display: inline-block;
-  padding: 6px 20px 4px;
+    display: inline-block;
+    padding: 6px 20px 4px;
 }
 
 .wrap-dimd {
-  position: fixed;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  background: #000;
-  opacity: 0;
-  z-index: 200;
-  transform: translate(100%, 0);
- transition: 0.3s opacity ease;
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background: #000;
+    opacity: 0;
+    z-index: 200;
+    transform: translate(100%, 0);
+    transition: 0.3s opacity ease;
 }
-
 
 .side-navigation-on .wrap {
-  transform: translate(50%, 0);
+    transform: translate(50%, 0);
 }
+
 .side-navigation-on .wrap-dimd {
-  opacity: 0.7;
-  transform: translate(0, 0);
+    opacity: 0.7;
+    transform: translate(0, 0);
 }
-
-
-
 
 .common-footer {
-  position: fixed;
-  bottom: 0px;
-  font-size: 13px;
-  display: float;
-  background: #e9e9e9;
-  padding: 30px 15px;
+    position: fixed;
+    bottom: 0px;
+    font-size: 13px;
+    display: float;
+    background: #e9e9e9;
+    padding: 30px 15px;
 }
 
-.common-footer .sitemap li{
-  display:inline-block;
-  padding-top: 0px;
-  padding-right: 10px;
-  padding-bottom: 30px;
-
-
+.common-footer .sitemap li {
+    display: inline-block;
+    padding-top: 0px;
+    padding-right: 10px;
+    padding-bottom: 30px;
 }
-.common-footer dt{
-  display: inline-block;
-  color:#5d5d5d;
 
+.common-footer dt {
+    display: inline-block;
+    color: #5d5d5d;
 }
-.common-footer dd{
-   display: inline-block;
-   color:#a0a0a0;
 
+.common-footer dd {
+    display: inline-block;
+    color: #a0a0a0;
 }
