--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ a {
 }
 
 a:hover {
-    color: #2ac1bc;
+    color: white;
 }
 
 button {
@@ -21,6 +21,7 @@ button {
     background: white;
     z-index: 10000;
     transition: 0.7s all ease;
+
 }
 
 .common-header {
@@ -32,7 +33,7 @@ button {
     width: 100%;
     height: 50px;
     z-index: 100;
-    background: rgba(0, 0, 0, 0.9);
+    background: rgba(255, 255, 255, 0.9);
 }
 
 .common-header a {
@@ -43,7 +44,7 @@ button {
 
 .common-header button {
     padding: 15px;
-    color: white;
+    color: black;
 }
 
 .main .main-item-nav {
@@ -56,11 +57,19 @@ button {
     height: 50px;
     line-height: 50px;
     z-index: 100;
-    background: rgba(50, 50, 50, 0.6);
+    background: rgba(0, 0, 0, 1);
 }
 
 .main-item-nav h2 {
     display: none;
+}
+
+.main-item-nav a {
+    color: white;
+}
+
+.main-item-nav button {
+    color: white;
 }
 
 .box-theme-galaxy {
@@ -85,17 +94,14 @@ button {
     font-size: 90px;
     color: white;
     text-align: center;
-    /*display: block;*/
-    /*line-height: 1214px;*/
-    /*white-space: nowrap;*/
 }
 
 .box-theme-galaxy .background-area {
-  position: absolute;
-  size: 100%;
-  top: 0;
-  left: 0;
-  z-index: 0;
+    position: absolute;
+    size: 100%;
+    top: 0;
+    left: 0;
+    z-index: 0;
 }
 
 .box-theme-galaxy .phone-area {
@@ -104,6 +110,71 @@ button {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 100;
+}
+
+.box-theme-dark {
+    background-color: black;
+    color: white;
+    padding: 100px;
+    min-width: 500px;
+}
+
+.box-theme-dark .display-subtitle {
+    color: white;
+    text-align: center;
+    font-size: 35px;
+    padding: 0 0 20px 0;
+}
+
+.box-theme-dark .display-description {
+    font-size: 20px;
+}
+
+.box-theme-light h2 {
+    display: none;
+    text-align: center;
+}
+
+.box-theme-light {
+    background-color: white;
+    padding: 100px;
+    min-width: 500px;
+}
+
+.box-theme-light h3 {
+    text-align: center;
+    font-size: 35px;
+    padding: 0 0 20px 0;
+}
+
+.box-theme-light p {
+    font-size: 20px;
+    text-align: center;
+}
+
+.sosumi-area {
+    background-color: #a9a9a9;
+    padding: 50px;
+}
+
+.move-page {
+    display: flex;
+    justify-content: space-between;
+}
+.move-page a{
+    font-size: 20px;
+}
+
+
+.carousel-inner {
+    padding: 100px 100px;
+}
+
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+    width: 70%;
+    margin: auto;
+    z-index: 2;
 }
 
 .side-navigation {
@@ -134,11 +205,14 @@ button {
 .side-navigation .item-nav ul {
     position: relative;
     margin: 30px 0;
+
+
 }
 
 .side-navigation .item-nav a {
     display: inline-block;
     padding: 6px 20px 4px;
+    color: white;
 }
 
 .side-navigation .service-nav ul {
@@ -149,6 +223,7 @@ button {
 .side-navigation .service-nav a {
     display: inline-block;
     padding: 6px 20px 4px;
+    color: white;
 }
 
 .wrap-dimd {
@@ -174,19 +249,11 @@ button {
 }
 
 .common-footer {
-    position: fixed;
     bottom: 0px;
     font-size: 13px;
     display: float;
-    background: #e9e9e9;
+    background: #a9a9a9;
     padding: 30px 15px;
-}
-
-.common-footer .sitemap li {
-    display: inline-block;
-    padding-top: 0px;
-    padding-right: 10px;
-    padding-bottom: 30px;
 }
 
 .common-footer dt {
@@ -196,5 +263,5 @@ button {
 
 .common-footer dd {
     display: inline-block;
-    color: #a0a0a0;
+    color: #fff;
 }
